--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "ext-zip": "*",
         "botble/api": "*@dev",
         "botble/get-started": "*@dev",
-        "botble/menu": "*@dev",
         "botble/installer": "*@dev",
+        "botble/menu": "*@dev",
         "botble/optimize": "*@dev",
         "botble/page": "*@dev",
         "botble/platform": "*@dev",
@@ -29,6 +29,8 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
+        "infobip-community/infobip-api-php-sdk": "*",
+        "infobip/infobip-api-php-client": "*",
         "laravel/framework": "^8.62",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
